Уточнение безопасных интервалов в криптосистеме Эль-Гамаля per @And42 (#6001)

--- a/public-key/el-gamal.tex
+++ b/public-key/el-gamal.tex
@@ -3,9 +3,9 @@
 
 Эта система шифрования с открытым ключом опубликована в 1985 году Эль-Гамалем (\langen{Taher El Gamal}, \cite{ElGamal:1984, ElGamal:1985}). Рассмотрим принципы её построения.
 
-Пусть имеется мультипликативная группа $\Z_p^* = \{1, 2, \dots, p-1\}$, где $p$ -- большое простое\index{число!простое} число, содержащее не менее 1024 двоичных разрядов. В группе $\Z_p^*$ существует $\varphi( \varphi( p ) ) = \varphi( p - 1 )$ элементов, которые порождают все элементы группы. Такие элементы называются генераторами\footnote{Подробнее см. раздел~\ref{section-groups} в приложении.}.
+Пусть имеется мультипликативная группа $\Z_p^* = \{1, 2, \dots, p-1\}$, где $p$ -- большое простое\index{число!простое} число\footnote{В оригинальной статье автор требует, чтобы число $p$ содержало как минимум один достаточно большой простой множитель.}, содержащее не менее 1024 двоичных разрядов. В группе $\Z_p^*$ существует $\varphi( \varphi( p ) ) = \varphi( p - 1 )$ элементов, которые порождают все элементы группы. Такие элементы называются генераторами\footnote{Подробнее см. раздел~\ref{section-groups} в приложении.}.
 
-Выберем один из таких генераторов $g$ и целое число $x$ в интервале $1 \leq x \leq p-1$. Вычислим:
+Выберем один из таких генераторов $g$ и целое число $x$ в интервале $1 < x < p-1$. Вычислим:
     \[ y = g^x \mod p. \]
 
 Хотя элементы $x$ и $y$ группы $\Z_p^*$ задают друг друга однозначно, найти $y$, зная $x$, просто, а вот эффективный алгоритм для получения $x$ по заданному $y$ неизвестен. Говорят, что задача вычисления дискретного логарифма
@@ -21,7 +21,7 @@
         \begin{enumerate}
             \item $A$ выбирает простое\index{число!простое} случайное число $p$.
             \item Выбирает генератор $g$ (в программных реализациях алгоритма генератор часто выбирается малым числом, например, $g = 2 \mod p$).
-            \item Выбирает $x \in [0, p - 1]$ с помощью генератора случайных чисел.
+            \item Выбирает $x \in (1, p - 1)$ с помощью генератора случайных чисел.
             \item Вычисляет $y=g^{x}\mod p$.
             \item Создаёт закрытый и открытый ключи $\SK$ и $\PK$:
                 \[ \SK = (p, g, x), ~ \PK = (p, g, y). \]
@@ -31,7 +31,7 @@
         \begin{enumerate}
             \item Стороне $B$ известен открытый ключ $\text{PK} = (p, g, y)$ стороны $A$.
             \item Сообщение представляется числом $m \in [0, p-1]$.
-            \item Сторона $B$ выбирает случайное число $r \in [1, p-1]$ и вычисляет:
+            \item Сторона $B$ выбирает случайное число $r \in (1, p-1)$ и вычисляет:
                 \[ \begin{array}{l}
                     a = g^r \mod p, \\
                     b = m \cdot y^r \mod p.
@@ -95,7 +95,7 @@
     \item Шифрование.
         \begin{enumerate}
             \item Пусть сообщением является число $m = 3 \in \Z_p^*$.
-            \item Выберем случайное число $r = 25 \in [1, p-1]$.
+            \item Выберем случайное число $r = 25 \in (1, p-1)$.
             \item Вычислим
                 \[ \begin{array}{l}
                     a = g^r \mod p = 6^{25} \mod 41 = 14 \mod 41, \\
@@ -179,7 +179,7 @@
         \begin{enumerate}
             \item Выберем $p=41$.
             \item Выберем генератор $g=6$ в группе $\Z_{41}^*$.
-            \item Выберем случайное $x = 19 \in [1, p-1]$.%, ~ \gcd(x, p-1) = 1$.
+            \item Выберем случайное $x = 19 \in (1, p-1)$.%, ~ \gcd(x, p-1) = 1$.
             \item Вычислим
                 \[ \begin{array}{ll}
                     y & = g^x \mod p = \\
