Исправление длинного раздела про группы точек ЭК (#5)

--- a/appendix/groups_of_ec_points_over_finite_fields.tex
+++ b/appendix/groups_of_ec_points_over_finite_fields.tex
@@ -1,7 +1,8 @@
-\section{Группа точек эллиптической кривой над полем}\label{section-math-ec-groups}\index{группа!точек эллиптической кривой|(}
+\section[Группы точек эллиптических кривых]{Группы точек\\
+	эллиптических кривых}\label{section-math-ec-groups}\index{группа!точек эллиптической кривой|(}
 \selectlanguage{russian}
 
-\subsection{Группы точек на эллиптических кривых}
+\subsection{Группы точек эллиптических кривых}
 
 Эллиптическая кривая $E$ над полем вещественных чисел записывается в виде уравнения, связывающего координаты $x$ и $y$ точек кривой:
 \begin{equation}
