Добавлено описание нестойкой криптографической хеш-функции MD5

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -842,6 +842,20 @@
     month       = {3},
 }
 
+@misc{rfc1321,
+	author		= {Rivest, Ronald Linn},
+	title		= {The MD5 Message-Digest Algorithm.},
+	series		= {Request for Comments},
+	number		= {1321},
+	howpublished	= {RFC 1321 (Proposed Standard)},
+	publisher	= {IETF},
+	organization	= {Internet Engineering Task Force},
+	year		= {1992},
+	month		= {4},
+	url		= {https://tools.ietf.org/html/rfc1321},
+	language	= {English},
+}
+
 @article{Bennett:1992,
     title       = {Quantum cryptography using any two nonorthogonal states},
     author      = {Bennett, Charles H.},
