--- a/hash-functions/index.tex
+++ b/hash-functions/index.tex
@@ -52,6 +52,8 @@
 
 При произвольной длине последовательности $X$ длина хеш-функции $H(X)$ в российском стандарте ГОСТ Р 34.11-94 равна 256 символам, в американском стандарте SHA несколько различных значений длин: 160, 192, 256, 512 символов.
 
+\input{MD5.tex}
+
 \input{GOST_R_34.11-94.tex}
 
 \input{GOST_R_34.11-2012.tex}
