Расширение и уточнение раздела про MD5

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1260,6 +1260,16 @@
 	url			= {https://csrc.nist.rip/groups/ST/toolkit/BCM/documents/proposedmodes/gcm/gcm-spec.pdf}
 }
 
+@misc{Wang:Feng:Lai:Yu:2004,
+    title       = {Collisions for Hash Functions MD4, MD5, HAVAL-128 and RIPEMD},
+    author      = {Wang, Xiaoyun and Feng, Dengguo and Lai, Xuejia and Yu, Hongbo},
+    howpublished = {Cryptology ePrint Archive, Report 2004/199},
+    year        = {2004},
+    totalpages  = {4},
+    url         = {https://ia.cr/2004/199},
+    language    = {English}
+}
+
 @INPROCEEDINGS{WangYu:2005,
 	author		= {Wang, Xiaoyun and Yu, Hongbo},
 	title		= {How to Break MD5 and Other Hash Functions},
@@ -1447,6 +1457,16 @@
     pagetotal   = {96},
     url         = {https://www.infosystems.ru/upload/iblock/154/slovar.pdf},
     language    = {Russian},
+}
+
+@misc{Klima:2006,
+    author       = {Klima, Vlastimil},
+    title        = {Tunnels in Hash Functions: MD5 Collisions Within a Minute},
+    howpublished = {Cryptology ePrint Archive, Report 2006/105},
+    year         = {2006},
+    totalpages   = {17},
+    url          = {https://ia.cr/2006/105},
+    language     = {English}
 }
 
 @book{Brittain:Darwin:2007,
