Переписан раздел про структуру Меркла-Дамгора

--- a/_settings.tex
+++ b/_settings.tex
@@ -147,6 +147,7 @@ number = {\textnumero}%
 \newcommand{\PK}{\textrm{PK}}
 \newcommand{\SK}{\textrm{SK}}
 
+\newcommand{\langda}[1]{дат. \foreignlanguage{danish}{\textit{#1}}}
 \newcommand{\langde}[1]{нем. \foreignlanguage{german}{\textit{#1}}}
 \newcommand{\langfr}[1]{фр. \foreignlanguage{french}{\textit{#1}}}
 \newcommand{\langen}[1]{англ. \foreignlanguage{english}{\textit{#1}}}
