--- a/hash-functions/index.tex
+++ b/hash-functions/index.tex
@@ -9,22 +9,6 @@
 
 \emph{Коллизией} хеш-функции называется пара значений аргумента, дающая одинаковый выход хеш-функции. Коллизии есть у любых хеш-функций, если количество различных значений аргумента превышает возможное количество значений результата функции (принцип Дирихле). А если не превышает, то и нет смысла использовать хеш-функцию.
 
-\example
-Приведём пример метода построения хеш-функции, называемого методом Меркла~---~Дамгарда\index{структура!Меркла~---~Дамгарда}~\cite{Merkle:1979, Merkle:1990, Damgard:1990}.
-
-Пусть имеется файл $X$ в виде двоичной последовательности некоторой длины. Разделяем $X$ на несколько отрезков фиксированной длины, например по 256 символов:  $m_{1} ~\|~ m_{2} ~\|~ m_{3} ~\|~ \ldots ~\|~ m_{t}$. Если длина файла $X$ не является кратной 256 битам, то последний отрезок дополняем нулевыми символами и обозначаем $m'_{t}$.
-Обозначим за $t$ новую длину последовательности. Считаем каждый отрезок $m_i, ~ i = 1, 2, \dots, t$ двоичным представлением целого числа.
-
-Для построения хеш-функции используем рекуррентный способ вычисления. Предварительно введём вспомогательную функцию $\chi(m, H)$, называемую функцией компрессии или сжимающей функцией. Задаём начальное значение $H_{0} = 0^{256} \equiv \underbrace{000 \ldots 0}_{256} $. Далее вычисляем:
-\[ \begin{array}{l}
-    H_1 = \chi( m_1, H_0), \\
-    H_2 = \chi( m_2, H_1), \\
-    \dots,\\
-    H_t = \chi( m'_t, H_{t-1}). \\
-\end{array} \]
-Считаем $H_{t} = h(X)$ хеш-функцией.
-\exampleend
-
 В программировании к свойствам хорошей хеш-функции относят:
 \begin{itemize}
     \item быструю скорость работы;
@@ -51,6 +35,8 @@
 Из требования на устойчивость к коллизиям, в частности, следует свойство (близости к) равномерности распределения результата криптографической хеш-функции по области значений. В целом надёжную криптографическую хеш-функ\-цию можно считать реализацией \emph{класса псевдослучайных функций} (PRF), то есть \emph{случайным оракулом}\index{оракул!случайный}.
 
 При произвольной длине последовательности $X$ длина хеш-функции $H(X)$ в российском стандарте ГОСТ Р 34.11-94 равна 256 символам, в американском стандарте SHA несколько различных значений длин: 160, 192, 256, 512 символов.
+
+\input{merkle-damgard.tex}
 
 \input{MD5.tex}
 
