Дамгарда => Дамгора (дат. Ivan Bjerre Damgård)

--- a/hash-functions/GOST_R_34.11-2012.tex
+++ b/hash-functions/GOST_R_34.11-2012.tex
@@ -11,16 +11,16 @@
 	\item максимальная производительность \emph{программной} реализации (процессоры архитектуры \texttt{x64}).
 \end{itemize}
 
-В соответствии с данными требованиями алгоритм новой хеш-функции основывается на хорошо изученных конструкциях Меркла~---~Дамгарда\index{структура!Меркла~---~Дамгарда}~\cite{Merkle:1979, Merkle:1990, Damgard:1990} и Миагучи~---~Пренеля\index{структура!Миагучи~---~Пренеля}~\cite{Espen:Mieghem:1989, Miyaguchi:Ohta:Iwata:1990:03, Miyaguchi:Ohta:Iwata:1990:11}, во внешней своей структуре практически полностью повторяя режим HAIFA\index{HAIFA} (\langen{HAsh Iterative FrAmework},~\cite{Biham:Dunkelman:2007}), использовавшийся в хеш-функциях SHAvite-3\index{хеш-функция!SHAvite-3} и BLAKE\index{хеш-функция!BLAKE}.
+В соответствии с данными требованиями алгоритм новой хеш-функции основывается на хорошо изученных конструкциях Меркла~---~Дамгора\index{структура!Меркла~---~Дамгора} (см. раздел~\ref{sec:merkle-damgard}) и Миагучи~---~Пренеля\index{структура!Миагучи~---~Пренеля}~\cite{Espen:Mieghem:1989, Miyaguchi:Ohta:Iwata:1990:03, Miyaguchi:Ohta:Iwata:1990:11}, во внешней своей структуре практически полностью повторяя режим HAIFA\index{HAIFA} (\langen{HAsh Iterative FrAmework},~\cite{Biham:Dunkelman:2007}), использовавшийся в хеш-функциях SHAvite-3\index{хеш-функция!SHAvite-3} и BLAKE\index{хеш-функция!BLAKE}.
 
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width=0.95\textwidth]{pic/stribog-md}
-  \caption{Использование структуры Меркла~---~Дамгарда в хеш-функции <<Стрибог>>}
+  \caption{Использование структуры Меркла~---~Дамгора в хеш-функции <<Стрибог>>}
   \label{fig:stribog-md}
 \end{figure}
 
-Как показано на рис.~\ref{fig:stribog-md}, входное сообщение разбивается на блоки по 512 бит (64 байта). Последний блок \emph{слева} дополняется последовательностью из нулей и  одной единицы до 512 бит (длина дополнения не учитывается в дальнейшем, когда длина сообщения используется как аргумент функций). Для каждой части сообщения вычисляется значение функции $g_N(h, m)$, которая в качестве аргумента использует текущий номер блока (умноженный на 512), результат вычисления для предыдущего блока и очередной блок сообщения. Также есть два завершающих преобразования. Первое вместо блока сообщения использует количество обработанных бит N (то есть длину сообщения), а второе -- арифметическую сумму значений всех блоков сообщения. В предположении, что функция $g_N(h, m)$ является надёжной для создания криптографически стойких хеш-функций, известно, что конструкция Меркла~---~Дамгарда позволяет получить хеш-функцию со следующими параметрами:
+Как показано на рис.~\ref{fig:stribog-md}, входное сообщение разбивается на блоки по 512 бит (64 байта). Последний блок \emph{слева} дополняется последовательностью из нулей и  одной единицы до 512 бит (длина дополнения не учитывается в дальнейшем, когда длина сообщения используется как аргумент функций). Для каждой части сообщения вычисляется значение функции $g_N(h, m)$, которая в качестве аргумента использует текущий номер блока (умноженный на 512), результат вычисления для предыдущего блока и очередной блок сообщения. Также есть два завершающих преобразования. Первое вместо блока сообщения использует количество обработанных бит N (то есть длину сообщения), а второе -- арифметическую сумму значений всех блоков сообщения. В предположении, что функция $g_N(h, m)$ является надёжной для создания криптографически стойких хеш-функций, известно, что конструкция Меркла~---~Дамгора позволяет получить хеш-функцию со следующими параметрами:
 
 \begin{itemize}
 	\item сложность построения прообраза: $2^n$ операций;
