--- a/hash-functions/merkle-damgard.tex
+++ b/hash-functions/merkle-damgard.tex
@@ -1,4 +1,4 @@
-\section{Структура Меркла~---~Дамгора}\index{кострукция!Меркла~---~Дамгора|(}
+\section{Структура Меркла~---~Дамгора}\label{sec:merkle-damgard}\index{структура!Меркла~---~Дамгора|(}
 \selectlanguage{russian}
 
 Приведём пример метода построения хеш-функции, называемого структурой (конструкцией, методом) Меркла~---~Дамгора (рис.~\ref{fig:merkle-damgard}), впервые описанной в кандидатской диссертации Ральфа Меркла в 1979 году. Меркл и Дамгор независимо друг от друга показали, что если раундовая функция сжатия (обозначенная $f$ на рис.~\ref{fig:merkle-damgard}) устойчива к коллизиям, то итоговая хеш-функция будет также устойчива (\langen{Ralph Charles Merkle}, \langda{Ivan Bjerre Damgård}, \cite{Merkle:1979, Merkle:1990, Damgard:1990}).
@@ -31,4 +31,4 @@ H_i = f ( H_{i-1}, M_i ).\\
 
 С использованием данной конструкции построены такие криптографические хеш-функции, как MD4\index{хеш-функция!MD4}, SHA-1\index{хеш-функция!SHA-1}, SHA-2\index{хеш-функция!SHA-2}, российский стандарт ГОСТ~Р~34.11-2012 (<<Стрибог>>)\index{хеш-функция!Стрибог} и многие другие.
 
-\index{кострукция!Меркла~---~Дамгора|)}
+\index{структура!Меркла~---~Дамгора|)}
