Переписан раздел про ГОСТ Р 34.11-94

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1384,6 +1384,19 @@
 	language	= {Russian},
 }
 
+@inproceedings{Boldyreva:Fehr:ONeill:2008,
+    author      = {Boldyreva, Alexandra and Fehr, Serge and O'Neill, Adam},
+    editor      = {Wagner, David},
+    title       = {On Notions of Security for Deterministic Encryption, and Efficient Constructions without Random Oracles},
+    booktitle   = {Advances in Cryptology -- CRYPTO 2008},
+    year        = {2008},
+    publisher   = {Springer Berlin Heidelberg},
+    address     = {Berlin, Heidelberg},
+    pages       = {335--359},
+    isbn        = {978-3-540-85174-5},
+    language    = {English}
+}
+
 @article{Cheremushkin:2009,
 	author		= {Черёмушкин, Александр Васильевич},
 	journal		= {Прикладная дискретная математика},
