--- a/hash-functions/GOST_R_34.11-94.tex
+++ b/hash-functions/GOST_R_34.11-94.tex
@@ -1,65 +1,55 @@
 \section{ГОСТ Р 34.11-94}\index{хеш-функция!ГОСТ Р 34.11-94|(}
 \selectlanguage{russian}
 
-Представим описание устаревшего российского стандарта хеш-функции ГОСТ Р 34.11-94~\cite{GOST-94}.
+Устаревший российский стандарт ГОСТ~Р~34.11-94~\cite{GOST-94} <<Информационная технология. Криптографическая защита информации. Функция хэширования>> описывает хеш-функцию, которая в целом также построена с использованием структуры Меркла~---~Дамгора\index{структура!Меркла~---~Дамгора}, но со своими особенностями (рис.~\ref{fig:gost-94}).
 
-Пусть $X$ -- последовательность длины 256 бит. Запишем $X$ тремя способами в виде конкатенации 4, 16 и 32 блоков:
-\[ \begin{array}{ll}
-    X & = X_4 ~\|~ X_3 ~\|~ X_2 ~\|~ X_1 = \\
-    & = ~ \eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_2 ~\|~ \eta_1 = \\
-    & = ~ \xi_{32} ~\|~ \xi_{31} ~\|~ \dots ~\|~ \xi_2 ~\|~ \xi_1,
-\end{array} \]
-с длинами 64, 16 и 8 бит соответственно.
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=\textwidth]{pic/gost-94}
+    \caption{Структура хеш-функции ГОСТ~Р~34.11-94}
+    \label{fig:gost-94}
+\end{figure}
 
-Введём три функции:
-\[ \begin{array}{ll}
-    A(X) & \equiv A(X_4 ~\|~ X_3 ~\|~ X_2 ~\|~ X_1) = \\
-        & = \left( X_1 \oplus X_2 \right) ~\|~ X_4 ~\|~ X_3 ~\|~ X_2, \\
-    & \\
-    \psi(X) & \equiv \psi(\eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_2 ~\|~ \eta_1) = \\
-        & = \left( \eta_1 \oplus \eta_2 \oplus \dots \oplus \eta_{15} \right) ~\|~
-            \eta_{16} ~\|~ \eta_{15} ~\|~ \dots ~\|~ \eta_3 ~\|~ \eta_2, \\
-    & \\
-    P(X) & \equiv P(\xi_{32} ~\|~ \xi_{31} ~\|~ \dots ~\|~ \xi_2 ~\|~ \xi_1) = \\
-        & = \xi_{\varphi(32)} ~\|~ \xi_{\varphi(31)} ~\|~ \dots ~\|~ \xi_{\varphi(2)} ~\|~ \xi_{\varphi(1)},
-\end{array} \]
-где $\varphi(s)$ -- перестановка байта, $s$ -- номер байта. Функции $A(X)$ и $\psi(X)$ -- регистры сдвига с линейной обратной связью.
-
-Число $s$ однозначно представляется через целые числа $i$ и $k$, а правило перестановки $\varphi(s)$ записывается:
-\[ \begin{array}{c}
-    s = i + 4 (k - 1) + 1, ~~ 0 \leq i \leq 3, ~ 1 \leq k \leq 8, \\
-    \varphi(s) = 8 i + k. \\
-\end{array} \]
-Приведём пример. Пусть $s = 7$, тогда $i=2$, $k=2$. Находим перестановку $\varphi(7) = 8 \cdot 2 + 2 = 18$. Седьмой байт переместился на 18-е место.
-
-В российском стандарте функция компрессии двух 256-битовых блоков сообщения $M$ и результата хеширования предыдущего блока $H$ имеет вид
-\[
-    H' = \chi(M, H) = \psi^{61}(H \oplus \psi(M \oplus \psi^{12}(S))),
+\begin{itemize}
+  \item Сообщение обрабатывается не с начального блока, а с конечного. Для целей удобства записи считается, что исходное сообщение разбивается на блоки\[
+  M = m_n \| m_{n-1} \| \dots \| m_2 \| m_1.
 \]
-где $\psi^j(X)$ -- суперпозиция $j$ функций $\psi( \psi( \dots ( \psi( X)) \dots ))$, ~ 256-битовый блок $S$ определяется ниже.
+  \item Дополнение происходит в блоке $m_n$, то есть в последнем обрабатываемом, но первом с точки зрения исходного текста. Блок дополняется нулями <<слева>> (то есть перед открытым текстом) до размера в 256 бит.
+  \item В отличие от хеш-функции MD5\index{хеш-функция!MD5} присутствует финальное преобразование, которое выполняется над арифметической суммой всех обработанных блоков. В будущем аналогичное преобразование будет использоваться и в хеш-функции ГОСТ~Р~34.11-2012 <<Стрибог>>\index{хеш-функция!Стрибог|(}.
+  \item Для хеш-функции не определены стартовый вектор $H_0 = IV$, внутренние параметры раундовой функции компресии (параметры $s$-блоков используемой функции шифрования) и способ представления результатов хеширования в виде 16-ричной и/или Base64-записи, что привело к появлению нескольких, несовместимых между собой реализаций алгоритма.
+\end{itemize}
 
-256-битовые блоки $H$ и $S$ представляются конкатенацией четырёх 64-битовых блоков
-\[ \begin{array}{l}
-    H = h_4 ~\|~ h_3 ~\|~ h_2 ~\|~ h_1, \\
-    S = s_4 ~\|~ s_3 ~\|~ s_2 ~\|~ s_1, \\
-    s_i = E_{K_i}( h_i), ~ i = 1, 2, 3, 4, \\
-\end{array} \]
-где $E_{K_i}( h_i)$ -- криптографическое преобразование 64-битового блока $h_i$ стандарта блочного шифрования ГОСТ 28147-89 с помощью ключа шифрования $K_i$.
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=\textwidth]{pic/gost-94-elxlxl}
+    \caption{Последовательность преобразований в раундовой функции сжатия ГОСТ~Р~34.11-94}
+    \label{fig:gost-94-elxlxl}
+\end{figure}
 
-Вычисление ключей $K_i$ производится через вспомогательные функции:
-\[ \begin{array}{c}
-    U_1 = H, ~~ V_1 = M, \\
-    U_i = A(U_{i-1}) \oplus C_i, ~~ V_i = A(A(V_{i-1})), ~~ i = 2, 3, 4, \\
-\end{array} \]
-где $C_2, C_3, C_4$ -- 256-битовые блоки:
-\[ \begin{array}{c}
-    C_2 = C_4 = 0^{256}, \\
-    C_3 = 1^8 0^8 1^{16} 0^{24} 1^{16} 0^8 (0^8 1^8)^2 1^8 0^8 (0^8 1^8)^4 (1^8 0^8)^4. \\
-\end{array} \]
-Окончательно получаем ключи:
-\[
-    K_i = P(U_i \oplus V_i), ~ i = 1,2,3,4.
-\]
+Раундовая функция сжатия состоит из нескольких последовательных преобразований, как показано на рис.~\ref{fig:gost-94-elxlxl}.
 
-%Ключевая хеш-функция определяется в виде $h_{K} (X)=h(KXK)$, где $h(X)$ -- некоторая стандартная хеш-функция, $K$ -- секретный ключ.
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=0.75\textwidth]{pic/gost-94-encrypt}
+    \caption{Шифрующее преобразование $E$ в раундовой функции сжатия хеш-функции ГОСТ~Р~34.11-94}
+    \label{fig:gost-94-encrypt}
+\end{figure}
+
+\begin{itemize}
+  \item Результат обработки предыдущего блока $H_{i-1}$ разделяется на 4 части.  Каждая из них шифруется собственным ключом (также полученным из $H_{i-1}$) с помощью блочного шифра ГОСТ~28147—89 в режиме простой замены, как показано на рис.~\ref{fig:gost-94-encrypt}. Результат шифрования конкатенируется (в $S$).
+
+\begin{figure}[htb]
+    \centering
+    \includegraphics[width=0.55\textwidth]{pic/gost-94-permutation}
+    \caption{Линейное преобразование $L$ в раундовой функции сжатия хеш-функции ГОСТ~Р~34.11-94}
+    \label{fig:gost-94-permutation}
+\end{figure}
+
+  \item Блок $S$ разбивается на 16 частей (по 16 бит), далее производится линейное преобразование, изображённое на рис.~\ref{fig:gost-94-permutation}. Все блоки кроме $x_1$ сдвигаются на одну позицию вправо. Значение первого блока $x_1$ складывается побитово по модулю 2 (операция XOR) со значениями блоков $x_2, x_3, x_4, x_13$ и $x_15$, результат помещается в блок $x_16$. Данное преобразование ($L$) повторяется 12 раз. 
+  \item К результату предыдущих преобразований складывается побитово по модулю 2 (операция XOR) с обрабатываемым блоком $m_i$. Это первый и единственный раз, когда в преобразованиях участвует обрабатываемая последовательность. Результат сложения пропускается через линейное преобразование $L$ 1 раз.
+  \item К результату побитово по модулю 2 (операция XOR) добавляется результат обработки предыдущей раундовой функции сжатия $H_{i-1}$. Результат сложения пропускается через линейное преобразование $L$ 61 раз.
+\end{itemize}
+
+В 2008 году криптоаналитики из Европы сумели уменьшить количество операций для поиска коллизий в $2^{23}$ раза (по сравнению с ожидаемым количеством $2^{128}$, \cite{Boldyreva:Fehr:ONeill:2008}). Хотя в целом это не позволяет говорить о криптографической ненадёжности хеш-функции на текущий момент, но показывает, что при её проектировании были допущеные определённые ошибки. С 1 января 2013 года на территории России стандарт был заменён на ГОСТ Р 34.11-2012 <<Стрибог>>.
+
 \index{хеш-функция!ГОСТ Р 34.11-94|)}
