--- a/block-ciphers/modes/GCM.tex
+++ b/block-ciphers/modes/GCM.tex
@@ -1,4 +1,4 @@
-\subsection{Счётчик с аутентификаций Галуа}
+\subsection{Счётчик с аутентификацией Галуа}
 \selectlanguage{russian}
 
 Режим счётчика с аутентификацией Галуа был предложен Девидом МакГрю и Джоном Виега в 2004 году (\langen{Galois/Counter Mode, GCM}, рис.~\ref{fig:GCM}, \cite{McGrew:Viega:2004}). Данный режим обеспечивает одновременно конфиденциальность и целостность, при условии правильного использования.
@@ -6,7 +6,7 @@
 \begin{figure}[bt]
 	\centering
 	\includegraphics[width=1\textwidth]{pic/GCM}
-	\caption{Режим счётчика с аутентификаций Галуа. Пунктирной рамкой выделена область формирования \emph{гаммы}, независящей от открытого текста.}
+	\caption{Режим счётчика с аутентификацией Галуа. Пунктирной рамкой выделена область формирования \emph{гаммы}, независящей от открытого текста.}
 	\label{fig:GCM}
 \end{figure}
 
