--- a/protocols/symmetric/wide-mouth_frog.tex
+++ b/protocols/symmetric/wide-mouth_frog.tex
@@ -41,7 +41,7 @@
 		\newinst[1]{Bob}{Bob}
 		
 		\mess{Alice}{$  A, E_A \left( T_A, B, K \right) $}{Trent}
-		\mess{Trent}{$ E_B E_B \left( T_T, A, K \right) $}{Bob}
+		\mess{Trent}{$ E_B \left( T_T, A, K \right) $}{Bob}
 		\mess{Eva}{$ B, E_B \left( T_T, A, K \right) $}{Trent}
 		\mess{Trent}{$ E_A \left( T'_T, B, K \right) $}{Alice}
 		\mess{Eva}{$ A, E_A \left( T'_T, B, K \right) $}{Trent}
@@ -92,7 +92,23 @@
 	\item[(3)] $Eva \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
 \end{protocol}
 
-В той же работе Лоу предложил модификацию протокола, вводящую явную взаимную аутентификацию абонентов с помощью случайной метки $R_B$ и проверки, что Алиса может расшифровать пакет с меткой, зашифрованной общим сеансовым ключом абонентов $K$. Однако данная модификация приводит к тому, что протокол теряет своё самое главное преимущество перед другими протоколами -- простоту.
+
+\begin{figure}
+	\centering
+	\begin{sequencediagram}
+		\newinst{Alice}{Alice}
+		\newinst[1]{Trent}{Trent}
+		\newinst[1]{Bob}{Bob}
+
+		\mess{Alice}{$  A, E_A \left( T_A, B, K \right) $}{Trent}
+		\mess{Trent}{$ E_B \left( T_T, A, K \right) $}{Bob}
+		\mess{Bob}{$ E_K \left( R_B \right) $}{Alice}
+		\mess{Alice}{$ E_K \left( R_B + 1 \right) $}{Bob}
+	\end{sequencediagram}
+	\caption{Модификация Гэвина Лоу протокола <<Wide-Mouth Frog>>\label{fig:key_distribution-wide-mouth_frog-Lowe-modification}}
+\end{figure}
+
+В той же работе Лоу предложил модификацию протокола, вводящую явную взаимную аутентификацию абонентов с помощью случайной метки $R_B$ и проверки, что Алиса может расшифровать пакет с меткой, зашифрованной общим сеансовым ключом абонентов $K$ (рис.~\ref{fig:key_distribution-wide-mouth_frog-Lowe-modification}). Однако данная модификация приводит к тому, что протокол теряет своё самое главное преимущество перед другими протоколами -- простоту.
 
 \begin{protocol}
 	\item[(1)] $Alice \to \{ A, E_A \left( T_A, B, K \right) \} \to Trent$
